<?xml version="1.0"?>
<package>
  <name>crom_control</name>
  <version>1.0.0</version>
  <description>The crom_control package</description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="mbeneto@robotnik.es">Marc Benetó</maintainer>


  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/crom_control</url> -->


  <author email="rnavarro@robotnik.es">Román Navarro</author>



  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>controller_manager</run_depend>


  <export>

  </export>
</package>
