<?xml version="1.0"?>
<package>
  <name>crom_gazebo</name>
  <version>1.0.0</version>
  <description>The crom_gazebo package</description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="mbeneto@robotnik.es">Marc Benetó</maintainer>


  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/crom_gazebo</url> -->


  <author email="rnavarro@robotnik.es">Román Navarro</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>crom_description</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>joint_state_controllers</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>joint_trajectory_controllers</run_depend>
  <run_depend>gazebo_ros_control</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
